[package]
name = "emoji-resizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "gzip", "brotli", "deflate"], default-features = false }
moka = { version = "0.12", features = ["future"] }
image = { version = "0.25", default-features = false, features = ["webp"] }
sha1 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
anyhow = "1.0"
